--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
  </head>
  <body>
   <h2>you got <a href="https://github.com/minichest/rickroll/">rickrolled</a></h2>
-  <iframe width="420" height="315" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ?autoplay=1"></iframe>
+  <iframe src="https://www.youtube.com/watch?v=dQw4w9WgXcQ?autoplay=1"></iframe>
  </body>
 </html>
