--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
  </head>
  <body>
   <h2>you got <a href="https://github.com/minichest/rickroll/">rickrolled</a></h2>
+  <audio controls autoplay>
+   <source src="Never Gonna Give You Up.mp3" type="audio/mp3">
+   Your browser does not support the audio tag.
+  </audio>
  </body>
 </html>
