--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
  <head>
-  <title> get rickrolled by aezi</title>
+  <title>well then</title>
   <link rel="stylesheet" href="rickroll.css">
  </head>
  <body>
-  <h2>you got <a href="https://github.com/minichest/rickroll/">rickrolled</a></h2>
+  <h2>i would play the <a href="https://github.com/minichest/incognito/">song</a></h2>
   <audio controls autoplay>
    <source src="Never Gonna Give You Up.mp3" type="audio/mpeg">
    Your browser does not support the audio tag.
