--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
  <head>
   <title>well then</title>
-  <link rel="stylesheet" href="rickroll.css">
+  <style>
+   html{
+    background-color: black
+    color: white;
+   }
  </head>
  <body>
   <h2>i would play the <a href="https://github.com/minichest/incognito/">song</a></h2>
