--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     background-color: black
     color: white;
    }
+  </style>
  </head>
  <body>
   <h2>i would play the <a href="https://github.com/minichest/incognito/">song</a></h2>
