--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>well then</title>
   <style>
    html{
-    background-color: black
+    background-color: black;
     color: white;
    }
   </style>
