--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   </style>
  </head>
  <body>
-  <h2>i would play the <a href="https://github.com/minichest/incognito/">song</a></h2>
-  <audio controls autoplay>
-   <source src="Never Gonna Give You Up.mp3" type="audio/mpeg">
-   Your browser does not support the audio tag.
-  </audio>
- </body>
-</html>
+  <center>
+   <h2>i would play the <a href="https://github.com/minichest/incognito/">song</a></h2>
+   <audio controls autoplay>
+    <source src="Never Gonna Give You Up.mp3" type="audio/mpeg">
+    Your browser does not support the audio tag.
+   </audio>
+  </center
+  </body>
+ </html>
